# embx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: logic.md  planning.md  releasing.md  roadmap.md
src/embx/: cache.py  cli.py  config.py  engine.py  exceptions.py  models.py  ranking.py
src/embx/commands/: __init__.py  batch.py  compare.py  config.py  connect.py  doctor.py  embed.py  models.py  ping.py  providers.py  quickstart.py  shared.py
src/embx/providers/: __init__.py  base.py  discovery.py  huggingface_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  registry.py  voyage_provider.py
tests/: test_cli.py  test_config_set_command.py  test_discovery.py  test_discovery_extra.py  test_engine_cache.py  test_huggingface_provider.py  test_openrouter_provider.py  test_ranking.py
