[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "embx-cli"
version = "0.1.1"
description = "Multi-provider embeddings CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "embx contributors" }
]
keywords = [
  "embeddings",
  "cli",
  "openai",
  "openrouter",
  "huggingface",
  "ollama",
  "voyage"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
dependencies = [
  "typer>=0.12.3,<1.0.0",
  "rich>=13.7.1,<14.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[project.urls]
Homepage = "https://github.com/vicmcorrea/embx"
Repository = "https://github.com/vicmcorrea/embx"
Issues = "https://github.com/vicmcorrea/embx/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<0.7.0"
]

[project.scripts]
embx = "embx.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/embx"]

[tool.hatch.build.targets.sdist]
include = [
  "src/embx",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "docs"
]
